--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,67 @@
 *{
     margin:0;
     padding:0;
-    border:5;
+    border:0;
     font-size:inherit;
     font-weight:inherit;
     font-family:inherit;
     text-decoration:inherit;
     line-height:inherit;
     color:inherit;
-    background:rgb(174, 149, 174);
-
+    background:white;
  }
+html,body{
+    font-family: "Helvetica Neue"Arial, Helvetica, sans-serif;
+    font-size :18px;
+    line-height:30px;
+    color:#302d2d
+    text-shadow 10px;
 
+}
+body{
+    text-align:center
+}
 h1{
-    background-color: beige;
+    background-color:rgb(140, 119, 140);
     color:black;
     font-size:xx-large;
-    text-decoration-style: wavy;
+    line-height:50px;
+    font-weight:bold;
 }
+img{
+    border-radius:25%;
+}
+
+.hero{
+    outline:1px solid clear;
+    height:100vw;
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+}
+    .hero img{
+        width:100%;
+        height:100%;
+    }
+        .headshot{
+            width:300px;
+            height:300px;
+            border-radius:50%;
+            overflow:hidden;
+            margin-left:auto;
+            margin-right:auto;
+            transition:transform 1s, box-shadow 1s;
+            background-image:url("sondra.jpg");
+            background-size:contain;
+        }
+        .headshot:hover{
+        transform:rotate(360deg);
+        box-shadow: 0px 0px 100PX 50PX rgb(140, 119, 140);
+        
+    }
+    .headshot img{
+        transition: opacity 1s;
+    }
+    .headshot:hover img{
+        opacity:0;
+    }
